# file-scanner

./: .gitignore  README.md  main.py  mcp_server.py  mcpo.json  pyproject.toml  run.sh  run_mcpo.sh  server.py
lib/: __init__.py  _discover.py  _helpers.py  _reader.py  _scanner.py
src/: scanner.py
