[project]
name = "file-system-mcp"
version = "0.1.0"
description = "Scan a directory. Discover files and folders 🤯"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "fastapi>=0.115.13",
    "fastmcp>=2.8.1",
    "mcpo>=0.0.15",
    "netifaces>=0.11.0",
    "pydantic>=2.11.7",
]
